--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0http://maven.apache.org/mav
   
 <packaging>jar</packaging>
   
-<version>3.0-SNAPSHOT ADD-SUB-MUL</version>
+<version>3.0-SNAPSHOT ADD-SUB-MUL-Calculation</version>
   
 
 <name>Calculator-Add-SUB-MUL</name>
