--- a/pom.xml
+++ b/pom.xml
@@ -25,4 +25,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0http://maven.apache.org/mav
 <build>
 <finalName>Add-SUB-MUL-Calc</finalName>
 </build>
+<dependencies>
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>3.0.0</version>
+</dependency>
+</dependencies>
 </project>
