--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0http://maven.apache.org/mav
     <artifactId>maven-resources-plugin</artifactId>
     <version>3.0.0</version>
 </dependency>
+<dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-plugin-api</artifactId>
+    <version>3.3.9</version>
+</dependency>
 </dependencies>
 </project>
