--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0http://maven.apache.org/mav
 <dependencies>
  <dependency>
     <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-clean-plugin</artifactId>
+    <version>3.0.0</version>
+</dependency>
+ <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
     <version>3.5.1</version>
 </dependency>
