--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,22 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0http://maven.apache.org/mav
 <build>
 <finalName>Add-SUB-MUL-Calc</finalName>
 </build>
+<reporting>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-checkstyle-plugin</artifactId>
+          <version>2.17</version>
+          <reportSets>
+            <reportSet>
+              <reports>
+                <report>checkstyle</report>
+              </reports>
+            </reportSet>
+          </reportSets>
+        </plugin>
+      </plugins>
+    </reporting>
 <dependencies>
  <dependency>
     <groupId>org.apache.maven.plugins</groupId>
