--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0http://maven.apache.org/mav
     </reporting>
 <dependencies>
  <dependency>
-    <groupId>maven</groupId>
+    <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-checkstyle-plugin</artifactId>
-    <version>3.0.1</version>
+    <version>2.17</version>
 </dependency>
  <dependency>
     <groupId>org.apache.maven.plugins</groupId>
