--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,16 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0http://maven.apache.org/mav
     </reporting>
 <dependencies>
  <dependency>
+    <groupId>pmd</groupId>
+    <artifactId>pmd</artifactId>
+    <version>4.3</version>
+</dependency>
+<dependency>
+    <groupId>findbugs</groupId>
+    <artifactId>findbugs</artifactId>
+    <version>1.0.0</version>
+</dependency>
+ <dependency>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-checkstyle-plugin</artifactId>
     <version>2.17</version>
