--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0http://maven.apache.org/mav
     <version>4.3</version>
 </dependency>
 <dependency>
-    <groupId>findbugs</groupId>
-    <artifactId>findbugs</artifactId>
-    <version>1.0.0</version>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>findbugs-maven-plugin</artifactId>
+    <version>3.0.3</version>
+</dependency>
 </dependency>
  <dependency>
     <groupId>org.apache.maven.plugins</groupId>
